@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-08-08T01:01:57Z",
-  "count_outdated" : 984,
-  "uniques_outdated" : 591,
-  "count" : 998,
-  "uniques" : 604,
+  "timestamp" : "2025-08-09T00:56:44Z",
+  "count_outdated" : 986,
+  "uniques_outdated" : 593,
+  "count" : 999,
+  "uniques" : 605,
   "clones" : [
-    {
-      "timestamp": "2025-07-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2025-07-27T00:00:00Z",
       "count": 1,
@@ -97,6 +88,15 @@
     },
     {
       "timestamp": "2025-08-07T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-08-08T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
