@@ -1,3 +1,12 @@
+2025-08-09T00:56:44Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16843499173 # 730
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-09
+* notice: last 14d: unq all: 3 13
+* notice: prev accum: outdated-unq outdated-all / unq all: 591 984 / 604 998
+* notice: next accum: outdated-unq outdated-all / unq all: 593 986 / 605 999
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-07-25] / [2025-08-08]
+
 2025-08-08T01:01:57Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16819334283 # 729
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-08
